striving forward to TDD a server into being